--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,7 @@
 
     <!-- Font -->
     <link
-      href="//db.onlinewebfonts.com/c/44f1d96a0579112e89a76a877b4645f4?family=MuseoSans-300"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="//db.onlinewebfonts.com/c/44f1d96a0579112e89a76a877b4645f4?family=MuseoSans-700"
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic,500,500italic,600,600italic,700,700italic,800,900"
       rel="stylesheet"
       type="text/css"
     />
@@ -48,18 +43,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>RAILS Tickets</title>
   </head>
-  <body
-    style="
-      font-family: MuseoSans-300, sans-serif;
-      font-size: 16px;
-      margin: 0;
-    "
-  >
-    <noscript
-      >You need to enable JavaScript to run this app.</noscript
-    >
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+
     <div id="root"></div>
     <div id="modal"></div>
     <!--
